Change HTML and CSS
'hverdag.html', 'kontakt.html', 'mad.html', 'styling.css' & 'sundhed.html'

--- a/kontakt.html
+++ b/kontakt.html
@@ -24,24 +24,31 @@
     </header>
 <!-- MAIN -->
     <main>
-      <img src="" alt="kontaktbillede">
+      <img src="img/front.jpg" alt="font af NATURKOST Odense">
       <section id="kontaktsbox">
-        <h2>Kontakt naturkost</h2>
         <!-- ADRESSE -->
-        <h3>Adresse</h3>
-        <p>Gravene 8, 5000 Odense C</p>
+        <div class="kontakoplysninger">
+          <h2>Adresse</h2>
+          <p>Gravene 8, 5000 Odense C</p>
+        </div>
         <!-- MAIL -->
-        <h3>Mail</h3>
-        <p>mail@naturkost-odense.dk</p>
+        <div class="kontakoplysninger">
+          <h2>E-mail</h2>
+          <p>mail@naturkost-odense.dk</p>
+        </div>
         <!-- TELEFON -->
-        <h3>Telefon</h3>
-        <p>+45 6613 7013</p>
-        <p>Mandag-fredag kl. 9.00-17.30</p>
+        <div class="kontakoplysninger">
+          <h2>Telefon</h2>
+          <p>+45 6613 7013</p>
+          <p>Mandag-fredag kl. 9.00-17.30</p>
+        </div>
         <!-- ÅBNINGSTIDER -->
-        <h3>Åbningstider</h3>
-        <p>Mandag-torsdag kl. 9.00-17.30</p>
-        <p>Fredag kl. 9.00-18.00</p>
-        <p>Lørdag kl. 9.00-14.00</p>
+        <div class="kontakoplysninger">
+          <h2>Åbningstider</h2>
+          <p>Mandag-torsdag kl. 9.00-17.30</p>
+          <p>Fredag kl. 9.00-18.00</p>
+          <p>Lørdag kl. 9.00-14.00</p>
+        </div>
       </section>
     </main>
 <!-- FOOTER -->
