--- a/mad.html
+++ b/mad.html
@@ -38,16 +38,28 @@
 <!-- MAIN -->
     <main>
       <h2 id="groed">Grød</h2>
+      <div class="kategoribilleder">
+      </div>
       <div class="hylde"></div>
       <h2 id="mel">Mel</h2>
+      <div class="kategoribilleder">
+      </div>
       <div class="hylde"></div>
       <h2 id="pasta">Pasta</h2>
+      <div class="kategoribilleder">
+      </div>
       <div class="hylde"></div>
       <h2 id="saft">Saft</h2>
+      <div class="kategoribilleder">
+      </div>
       <div class="hylde"></div>
       <h2 id="vin">Vin</h2>
+      <div class="kategoribilleder">
+      </div>
       <div class="hylde"></div>
       <h2 id="teogkaffe">Te og kaffe</h2>
+      <div class="kategoribilleder">
+      </div>
       <div class="hylde"></div>
     </main>
 <!-- FOOTER -->
