--- a/sundhed.html
+++ b/sundhed.html
@@ -35,12 +35,20 @@
 <!-- MAIN -->
     <main>
       <h2 id="vitamintilskud">VITAMINTILSKUD</h2>
+      <div class="kategoribilleder">
+      </div>
       <div class="hylde"></div>
       <h2 id="kosttilskud">KOSTTILSKUD</h2>
+      <div class="kategoribilleder">
+      </div>
       <div class="hylde"></div>
       <h2 id="lægemidler">LÆGEMIDLER</h2>
+      <div class="kategoribilleder">
+      </div>
       <div class="hylde"></div>
       <h2 id="cremer">CREMER</h2>
+      <div class="kategoribilleder">
+      </div>
       <div class="hylde"></div>
     </main>
 <!-- FOOTER -->
