--- a/mad.html
+++ b/mad.html
@@ -51,14 +51,27 @@
       <div class="hylde"></div>
       <h2 id="saft">Saft</h2>
       <div class="kategoribilleder">
+        <img src="img/mad/ananassaft.png" alt="">
+        <img src="img/mad/birkesaft.png" alt="">
+        <img src="img/mad/citronsaft.png" alt="">
+        <img src="img/mad/grøntsagssaft.png" alt="">
+        <img src="img/mad/hyldebærsaft.png" alt="">
+        <img src="img/mad/rødbedesaft.png" alt="">
       </div>
       <div class="hylde"></div>
       <h2 id="vin">Vin</h2>
       <div class="kategoribilleder">
+        <img src="img/mad/clearly_rosé.png" alt="">
+        <img src="img/mad/hvidvin_cuvee.png" alt="">
+        <img src="img/mad/hvidvin_latue.png" alt="">
+        <img src="img/mad/rødvin_latue.png" alt="">
+        <img src="img/mad/rødvin_raw.png" alt="">
+        <img src="img/mad/spansk_cava.png" alt="">
       </div>
       <div class="hylde"></div>
       <h2 id="teogkaffe">Te og kaffe</h2>
       <div class="kategoribilleder">
+        <img src="img/mad/Kaffe_malet_500g.jpg" alt="">
       </div>
       <div class="hylde"></div>
     </main>
