Edit and add img
img

--- a/hverdag.html
+++ b/hverdag.html
@@ -27,38 +27,36 @@
     </header>
 <!-- MENU -->
     <ul class="menu">
-      <li><a href="#tøj">TØJ</a></li>
+			<li><a href="#kealedyr">KÆLEDYR</a></li>
       <li><a href="#rengoering">RENGØRING</a></li>
-      <li><a href="#kealedyr">KÆLEDYR</a></li>
+			<li><a href="#tøj">TØJ</a></li>
     </ul>
 	<!-- MAIN -->
 		<main>
-			<h2 id="#toej">TØJ</h2>
-			<div class="kategoribilleder">
-				<img src="img/hverdag/bodystocking.png" alt="kort bodystocking">
-				<img src="img/hverdag/bukser.png" alt="blomstrede bukser">
-				<img src="img/hverdag/jakke.png" alt="jakke med hætte">
-				<img src="img/hverdag/kjole.png" alt="kjole med blomster">
-				<img src="img/hverdag/top.png" alt="hue med striber">
-				<img src="img/hverdag/tshirt.png" alt="stribet t-shirt">
-			</div>
-			<div class="hylde"></div>
-
-			<h2 id="rengoering">RENGØRING</h2>
-			<div class="kategoribilleder">
-				<img src="img/hverdag//almawin.png" alt="almawin">
-				<img src="img/hverdag//foodwastebags.png" alt="affaldsposer">
-				<img src="img/hverdag/soap.png" alt="sæbe">
-				<img src="img/hverdag//toiletbørste.png" alt="toiletbørste">
-				<img src="img/hverdag//tøjklemmer.png" alt="tøjklemmer">
-				<img src="img/hverdag//vaskemiddel.png" alt="vaskemiddel">
-			</div>
-			<div class="hylde"></div>
-
 			<h2 id="kealedyr">KÆLEDYR</h2>
 			<div class="kategoribilleder">
-				<img src="img/hverdag//agiovet.png" alt="agiovet">
-				<img src="img/hverdag//flora.png" alt="MSM lignisul">
+				<img src="img/hverdag/kealedyr/agiovet.png" alt="agiovet">
+				<img src="img/hverdag/kealedyr/flora.png" alt="MSM lignisul">
+			</div>
+			<div class="hylde"></div>
+			<h2 id="rengoering">RENGØRING</h2>
+			<div class="kategoribilleder">
+				<img src="img/hverdag/rengoering/almawin.png" alt="almawin">
+				<img src="img/hverdag/rengoering/foodwastebags.png" alt="affaldsposer">
+				<img src="img/hverdag/rengoering/soap.png" alt="sæbe">
+				<img src="img/hverdag/rengoering/toiletbørste.png" alt="toiletbørste">
+				<img src="img/hverdag/rengoering/tøjklemmer.png" alt="tøjklemmer">
+				<img src="img/hverdag/rengoering/vaskemiddel.png" alt="vaskemiddel">
+			</div>
+			<div class="hylde"></div>
+			<h2 id="#toej">TØJ</h2>
+			<div class="kategoribilleder">
+				<img src="img/hverdag/toej/bodystocking.png" alt="kort bodystocking">
+				<img src="img/hverdag/toej/bukser.png" alt="blomstrede bukser">
+				<img src="img/hverdag/toej/jakke.png" alt="jakke med hætte">
+				<img src="img/hverdag/toej/kjole.png" alt="kjole med blomster">
+				<img src="img/hverdag/toej/top.png" alt="hue med striber">
+				<img src="img/hverdag/toej/tshirt.png" alt="stribet t-shirt">
 			</div>
 			<div class="hylde"></div>
 		</main>
