--- a/mad.html
+++ b/mad.html
@@ -32,8 +32,8 @@
     <li><a href="#mel">Mel</a></li>
     <li><a href="#pasta">Pasta</a></li>
     <li><a href="#saft">Saft</a></li>
-    <li><a href="#vin">Vin</a></li>
     <li><a href="#teogkaffe">Te og Kaffe</a></li>
+    <li><a href="#vin">Vin</a></li>
   </ul>
 <!-- MAIN -->
     <main>
@@ -51,27 +51,26 @@
       <div class="hylde"></div>
       <h2 id="saft">Saft</h2>
       <div class="kategoribilleder">
-        <img src="img/mad/ananassaft.png" alt="">
-        <img src="img/mad/birkesaft.png" alt="">
-        <img src="img/mad/citronsaft.png" alt="">
-        <img src="img/mad/grøntsagssaft.png" alt="">
-        <img src="img/mad/hyldebærsaft.png" alt="">
-        <img src="img/mad/rødbedesaft.png" alt="">
+        <img src="img/mad/saft/ananassaft.png" alt="">
+        <img src="img/mad/saft/birkesaft.png" alt="">
+        <img src="img/mad/saft/citronsaft.png" alt="">
+        <img src="img/mad/saft/grøntsagssaft.png" alt="">
+        <img src="img/mad/saft/hyldebærsaft.png" alt="">
+        <img src="img/mad/saft/rødbedesaft.png" alt="">
+      </div>
+      <h2 id="teogkaffe">Te og kaffe</h2>
+      <div class="kategoribilleder">
+        <img src="img/mad/kaffeogte/Kaffe_malet_500g.jpg" alt="">
       </div>
       <div class="hylde"></div>
       <h2 id="vin">Vin</h2>
       <div class="kategoribilleder">
-        <img src="img/mad/clearly_rosé.png" alt="">
-        <img src="img/mad/hvidvin_cuvee.png" alt="">
-        <img src="img/mad/hvidvin_latue.png" alt="">
-        <img src="img/mad/rødvin_latue.png" alt="">
-        <img src="img/mad/rødvin_raw.png" alt="">
-        <img src="img/mad/spansk_cava.png" alt="">
-      </div>
-      <div class="hylde"></div>
-      <h2 id="teogkaffe">Te og kaffe</h2>
-      <div class="kategoribilleder">
-        <img src="img/mad/Kaffe_malet_500g.jpg" alt="">
+        <img src="img/mad/vin/clearly_rosé.png" alt="">
+        <img src="img/mad/vin/hvidvin_cuvee.png" alt="">
+        <img src="img/mad/vin/hvidvin_latue.png" alt="">
+        <img src="img/mad/vin/rødvin_latue.png" alt="">
+        <img src="img/mad/vin/rødvin_raw.png" alt="">
+        <img src="img/mad/vin/spansk_cava.png" alt="">
       </div>
       <div class="hylde"></div>
     </main>
