--- a/andet.html
+++ b/andet.html
@@ -23,13 +23,41 @@
           <div class="burger"></div>
         </div>
   </header>
-
+<!-- MENU -->
   <ul class="menu">
-    <li><a href="mad.html">Bøger</a></li>
-    <li><a href="mad.html">Film</a></li>
-    <li><a href="mad.html">Gaveartikler</a></li>
-    <li><a href="mad.html">Spirituelt</a></li>
+    <li><a href="#boeger">Bøger</a></li>
+    <li><a href="#film">Film</a></li>
+    <li><a href="#gaveartikler">Gaveartikler</a></li>
+    <li><a href="#spirituelt">Spirituelt</a></li>
   </ul>
+  <main>
+    <h2 id="boeger">BØGER</h2>
+    <div class="kategoribilleder">
+    </div>
+    <div class="hylde"></div>
+
+    <h2 id="film">FILM</h2>
+    <div class="kategoribilleder">
+    </div>
+    <div class="hylde"></div>
+
+    <h2 id="gaveartikler">GAVEARTIKLER</h2>
+    <div class="kategoribilleder">
+      <img src="img/andet/gaveartikler/Augenkissen_Bjergkrystal.png" alt="almawin">
+      <img src="img/andet/gaveartikler/drikkedunk_med_krystaller.png" alt="almawin">
+      <img src="img/andet/gaveartikler/lavendelposer.png" alt="almawin">
+      <img src="img/andet/gaveartikler/love_box.png" alt="almawin">
+      <img src="img/andet/gaveartikler/scepter.png" alt="almawin">
+      <img src="img/andet/gaveartikler/silk_scroll.png" alt="almawin">
+    </div>
+    <div class="hylde"></div>
+
+    <h2 id="spirituelt">SPIRITUELT</h2>
+    <div class="kategoribilleder">
+    </div>
+    <div class="hylde"></div>
+
+  </main>
     <footer>
       <p>&copy Naturkost 2020</p>
     </footer>
