--- a/mad.html
+++ b/mad.html
@@ -60,7 +60,17 @@
       </div>
       <h2 id="teogkaffe">Te og kaffe</h2>
       <div class="kategoribilleder">
-        <img src="img/mad/kaffeogte/Kaffe_malet_500g.jpg" alt="">
+        <img src="img/mad/kaffeogte/chinesetea.png" alt="">
+        <img src="img/mad/kaffeogte/gingerlemon.png" alt="">
+        <img src="img/mad/kaffeogte/gingertea.png" alt="">
+        <img src="img/mad/kaffeogte/grønkaffe.png" alt="">
+        <img src="img/mad/kaffeogte/Kaffe_malet_500g.png" alt="">
+        <img src="img/mad/kaffeogte/kaffee.png" alt="">
+        <img src="img/mad/kaffeogte/nursingtea.png" alt="">
+        <img src="img/mad/kaffeogte/nursingtea(1).png" alt="">
+        <img src="img/mad/kaffeogte/Skovenskaffe.png" alt="">
+        <img src="img/mad/kaffeogte/unite.png" alt="">
+        <img src="img/mad/kaffeogte/wholekaffe.png" alt="">
       </div>
       <div class="hylde"></div>
       <h2 id="vin">Vin</h2>
