--- a/andet.html
+++ b/andet.html
@@ -33,6 +33,12 @@
   <main>
     <h2 id="boeger">BØGER</h2>
     <div class="kategoribilleder">
+      <img src="img/andet/boeger/en_ny_jord.png" alt="almawin">
+      <img src="img/andet/boeger/gennem_dødens_porte.png" alt="almawin">
+      <img src="img/andet/boeger/ni_upanishader.png" alt="almawin">
+      <img src="img/andet/boeger/ramana_maharshi.png" alt="almawin">
+      <img src="img/andet/boeger/rudolf_steiner.png" alt="almawin">
+      <img src="img/andet/boeger/vi_skal_frigøre_ikke_binde_hinanden.png" alt="almawin">
     </div>
     <div class="hylde"></div>
 
