--- a/main.html
+++ b/main.html
@@ -13,7 +13,9 @@
 
 <body>
   <header>
-    <h1>Naturkost</h1>
+    <a href="main.html">
+    <img id="logo" src="img/logo/naturkostbladslog02.png" alt="vores logo">
+    </a>
   </header>
   <div id="fronticons">
     <a href="burger"><div id="burgermenu">
