--- a/andet.html
+++ b/andet.html
@@ -49,10 +49,10 @@
 
     <h2 id="gaveartikler">GAVEARTIKLER</h2>
     <div class="kategoribilleder">
-      <img src="img/andet/gaveartikler/Augenkissen_Bjergkrystal.png" alt="almawin">
       <img src="img/andet/gaveartikler/drikkedunk_med_krystaller.png" alt="almawin">
-      <img src="img/andet/gaveartikler/lavendelposer.png" alt="almawin">
+      <img src="img/andet/gaveartikler/kikærtepude.png" alt="almawin">
       <img src="img/andet/gaveartikler/love_box.png" alt="almawin">
+      <img src="img/andet/gaveartikler/nakkepude.png" alt="almawin">
       <img src="img/andet/gaveartikler/scepter.png" alt="almawin">
       <img src="img/andet/gaveartikler/silk_scroll.png" alt="almawin">
     </div>
