--- a/mad.html
+++ b/mad.html
@@ -39,6 +39,12 @@
     <main>
       <h2 id="groed">Grød</h2>
       <div class="kategoribilleder">
+        <img src="img/mad/groed/altidmætgrød.png" alt="">
+        <img src="img/mad/groed/glutenfrigrød.png" alt="">
+        <img src="img/mad/groed/grødblanding.png" alt="">
+        <img src="img/mad/groed/hirsegrød.png" alt="">
+        <img src="img/mad/groed/krudtuglegrød.png" alt="">
+        <img src="img/mad/groed/ristilgrød.png" alt="">
       </div>
       <div class="hylde"></div>
       <h2 id="mel">Mel</h2>
