--- a/sundhed.html
+++ b/sundhed.html
@@ -49,8 +49,10 @@
       <h2 id="kosttilskud">KOSTTILSKUD</h2>
       <div class="kategoribilleder">
         <img src="img/sundhed/kosttilskud/calmag.png" alt="almawin">
+        <img src="img/sundhed/kosttilskud/granatæble.png" alt="almawin">
         <img src="img/sundhed/kosttilskud/mave.png" alt="almawin">
         <img src="img/sundhed/kosttilskud/overgangsalderen.png" alt="almawin">
+        <img src="img/sundhed/kosttilskud/øjenkosttilskud.png" alt="almawin">
       </div>
       <div class="hylde"></div>
 
