--- a/mad.html
+++ b/mad.html
@@ -49,6 +49,12 @@
       <div class="hylde"></div>
       <h2 id="mel">Mel</h2>
       <div class="kategoribilleder">
+        <img src="img/mad/mel/amarantmel.png" alt="">
+        <img src="img/mad/mel/bygmel.png" alt="">
+        <img src="img/mad/mel/chufamel.png" alt="">
+        <img src="img/mad/mel/dalarhvedemel.png" alt="">
+        <img src="img/mad/mel/mandelmel.png" alt="">
+        <img src="img/mad/mel/sesammel.png" alt="">
       </div>
       <div class="hylde"></div>
       <h2 id="pasta">Pasta</h2>
@@ -64,6 +70,7 @@
         <img src="img/mad/saft/hyldebærsaft.png" alt="">
         <img src="img/mad/saft/rødbedesaft.png" alt="">
       </div>
+      <div class="hylde"></div>
       <h2 id="teogkaffe">Te og kaffe</h2>
       <div class="kategoribilleder">
         <img src="img/mad/kaffeogte/chinesetea.png" alt="">
