--- a/andet.html
+++ b/andet.html
@@ -60,6 +60,11 @@
 
     <h2 id="spirituelt">SPIRITUELT</h2>
     <div class="kategoribilleder">
+      <img src="img/andet/spirituelt/bud.png" alt="almawin">
+      <img src="img/andet/spirituelt/drømmefanger.png" alt="almawin">
+      <img src="img/andet/spirituelt/engel.png" alt="almawin">
+      <img src="img/andet/spirituelt/hjertesten.png" alt="almawin">
+      <img src="img/andet/spirituelt/røgelse.png" alt="almawin">
     </div>
     <div class="hylde"></div>
 
