--- a/mad.html
+++ b/mad.html
@@ -59,6 +59,12 @@
       <div class="hylde"></div>
       <h2 id="pasta">Pasta</h2>
       <div class="kategoribilleder">
+        <img src="img/mad/pasta/bioganpasta.png" alt="">
+        <img src="img/mad/pasta/blackrisenudler.png" alt="">
+        <img src="img/mad/pasta/macaroni.png" alt="">
+        <img src="img/mad/pasta/nudler.png" alt="">
+        <img src="img/mad/pasta/pasta.png" alt="">
+        <img src="img/mad/pasta/spirales.png" alt="">
       </div>
       <div class="hylde"></div>
       <h2 id="saft">Saft</h2>
@@ -77,10 +83,10 @@
         <img src="img/mad/kaffeogte/gingerlemon.png" alt="">
         <img src="img/mad/kaffeogte/gingertea.png" alt="">
         <img src="img/mad/kaffeogte/grønkaffe.png" alt="">
-        <img src="img/mad/kaffeogte/Kaffe_malet_500g.png" alt="">
         <img src="img/mad/kaffeogte/kaffee.png" alt="">
         <img src="img/mad/kaffeogte/nursingtea.png" alt="">
-        <img src="img/mad/kaffeogte/nursingtea(1).png" alt="">
+        <img src="img/mad/kaffeogte/organiktea.png" alt="">
+        <img src="img/mad/kaffeogte/organskkaffe.png" alt="">
         <img src="img/mad/kaffeogte/Skovenskaffe.png" alt="">
         <img src="img/mad/kaffeogte/unite.png" alt="">
         <img src="img/mad/kaffeogte/wholekaffe.png" alt="">
