Add img alt text
img alt

--- a/andet.html
+++ b/andet.html
@@ -33,12 +33,12 @@
   <main>
     <h2 id="boeger">BØGER</h2>
     <div class="kategoribilleder">
-      <img src="img/andet/boeger/en_ny_jord.png" alt="almawin">
-      <img src="img/andet/boeger/gennem_dødens_porte.png" alt="almawin">
-      <img src="img/andet/boeger/ni_upanishader.png" alt="almawin">
-      <img src="img/andet/boeger/ramana_maharshi.png" alt="almawin">
-      <img src="img/andet/boeger/rudolf_steiner.png" alt="almawin">
-      <img src="img/andet/boeger/vi_skal_frigøre_ikke_binde_hinanden.png" alt="almawin">
+      <img src="img/andet/boeger/en_ny_jord.png" alt="Produktbillede af en ny jord">
+      <img src="img/andet/boeger/gennem_dødens_porte.png" alt="Produktbillede af gennem dødens porte">
+      <img src="img/andet/boeger/ni_upanishader.png" alt="Produktbillede af ni upanishader">
+      <img src="img/andet/boeger/ramana_maharshi.png" alt="Produktbillede af ramana maharshi">
+      <img src="img/andet/boeger/rudolf_steiner.png" alt="Produktbillede af rudolf steiner">
+      <img src="img/andet/boeger/vi_skal_frigøre_ikke_binde_hinanden.png" alt="Produktbillede af vi skal frigøre ikke binde hinanden">
     </div>
     <div class="hylde"></div>
 
@@ -49,22 +49,22 @@
 
     <h2 id="gaveartikler">GAVEARTIKLER</h2>
     <div class="kategoribilleder">
-      <img src="img/andet/gaveartikler/drikkedunk_med_krystaller.png" alt="almawin">
-      <img src="img/andet/gaveartikler/kikærtepude.png" alt="almawin">
-      <img src="img/andet/gaveartikler/love_box.png" alt="almawin">
-      <img src="img/andet/gaveartikler/nakkepude.png" alt="almawin">
-      <img src="img/andet/gaveartikler/scepter.png" alt="almawin">
-      <img src="img/andet/gaveartikler/silk_scroll.png" alt="almawin">
+      <img src="img/andet/gaveartikler/drikkedunk_med_krystaller.png" alt="Produktbillede af drikkedunk med krystaller">
+      <img src="img/andet/gaveartikler/kikærtepude.png" alt="Produktbillede af kikærtepude">
+      <img src="img/andet/gaveartikler/love_box.png" alt="Produktbillede af love box">
+      <img src="img/andet/gaveartikler/nakkepude.png" alt="Produktbillede af nakkepude">
+      <img src="img/andet/gaveartikler/scepter.png" alt="Produktbillede af scepter">
+      <img src="img/andet/gaveartikler/silk_scroll.png" alt="Produktbillede af silk scroll">
     </div>
     <div class="hylde"></div>
 
     <h2 id="spirituelt">SPIRITUELT</h2>
     <div class="kategoribilleder">
-      <img src="img/andet/spirituelt/bud.png" alt="almawin">
-      <img src="img/andet/spirituelt/drømmefanger.png" alt="almawin">
-      <img src="img/andet/spirituelt/engel.png" alt="almawin">
-      <img src="img/andet/spirituelt/hjertesten.png" alt="almawin">
-      <img src="img/andet/spirituelt/røgelse.png" alt="almawin">
+      <img src="img/andet/spirituelt/bud.png" alt="Produktbillede af bud">
+      <img src="img/andet/spirituelt/drømmefanger.png" alt="Produktbillede af drømmefanger">
+      <img src="img/andet/spirituelt/engel.png" alt="Produktbillede af engel">
+      <img src="img/andet/spirituelt/hjertesten.png" alt="Produktbillede af hjertesten">
+      <img src="img/andet/spirituelt/røgelse.png" alt="Produktbillede af røgelse">
     </div>
     <div class="hylde"></div>
 
