--- a/hverdag.html
+++ b/hverdag.html
@@ -29,34 +29,36 @@
     <ul class="menu">
 			<li><a href="#kealedyr">KÆLEDYR</a></li>
       <li><a href="#rengoering">RENGØRING</a></li>
-			<li><a href="#tøj">TØJ</a></li>
+			<li><a href="#toej">TØJ</a></li>
     </ul>
 	<!-- MAIN -->
 		<main>
 			<h2 id="kealedyr">KÆLEDYR</h2>
 			<div class="kategoribilleder">
-				<img src="img/hverdag/kealedyr/agiovet.png" alt="agiovet">
-				<img src="img/hverdag/kealedyr/flora.png" alt="MSM lignisul">
+				<img src="img/hverdag/kealedyr/agiovet.png" alt="Produktbillede af agiovet">
+				<img src="img/hverdag/kealedyr/flora.png" alt="Produktbillede af MSM lignisul">
 			</div>
 			<div class="hylde"></div>
+
 			<h2 id="rengoering">RENGØRING</h2>
 			<div class="kategoribilleder">
-				<img src="img/hverdag/rengoering/almawin.png" alt="almawin">
-				<img src="img/hverdag/rengoering/foodwastebags.png" alt="affaldsposer">
-				<img src="img/hverdag/rengoering/soap.png" alt="sæbe">
-				<img src="img/hverdag/rengoering/toiletbørste.png" alt="toiletbørste">
-				<img src="img/hverdag/rengoering/tøjklemmer.png" alt="tøjklemmer">
-				<img src="img/hverdag/rengoering/vaskemiddel.png" alt="vaskemiddel">
+				<img src="img/hverdag/rengoering/almawin.png" alt="Produktbillede af almawin">
+				<img src="img/hverdag/rengoering/foodwastebags.png" alt="Produktbillede af affaldsposer">
+				<img src="img/hverdag/rengoering/soap.png" alt="Produktbillede af sæbe">
+				<img src="img/hverdag/rengoering/toiletbørste.png" alt="Produktbillede af toiletbørste">
+				<img src="img/hverdag/rengoering/tøjklemmer.png" alt="Produktbillede af tøjklemmer">
+				<img src="img/hverdag/rengoering/vaskemiddel.png" alt="Produktbillede af vaskemiddel">
 			</div>
 			<div class="hylde"></div>
-			<h2 id="#toej">TØJ</h2>
+			
+			<h2 id="toej">TØJ</h2>
 			<div class="kategoribilleder">
-				<img src="img/hverdag/toej/bodystocking.png" alt="kort bodystocking">
-				<img src="img/hverdag/toej/bukser.png" alt="blomstrede bukser">
-				<img src="img/hverdag/toej/jakke.png" alt="jakke med hætte">
-				<img src="img/hverdag/toej/kjole.png" alt="kjole med blomster">
-				<img src="img/hverdag/toej/top.png" alt="hue med striber">
-				<img src="img/hverdag/toej/tshirt.png" alt="stribet t-shirt">
+				<img src="img/hverdag/toej/bodystocking.png" alt="Produktbillede af kort bodystocking">
+				<img src="img/hverdag/toej/bukser.png" alt="Produktbillede af blomstrede bukser">
+				<img src="img/hverdag/toej/jakke.png" alt="Produktbillede af jakke med hætte">
+				<img src="img/hverdag/toej/kjole.png" alt="Produktbillede af kjole med blomster">
+				<img src="img/hverdag/toej/top.png" alt="Produktbillede af hue med striber">
+				<img src="img/hverdag/toej/tshirt.png" alt="Produktbillede af stribet t-shirt">
 			</div>
 			<div class="hylde"></div>
 		</main>
