--- a/mad.html
+++ b/mad.html
@@ -39,67 +39,71 @@
     <main>
       <h2 id="groed">Grød</h2>
       <div class="kategoribilleder">
-        <img src="img/mad/groed/altidmætgrød.png" alt="">
-        <img src="img/mad/groed/glutenfrigrød.png" alt="">
-        <img src="img/mad/groed/grødblanding.png" alt="">
-        <img src="img/mad/groed/hirsegrød.png" alt="">
-        <img src="img/mad/groed/krudtuglegrød.png" alt="">
-        <img src="img/mad/groed/ristilgrød.png" alt="">
+        <img src="img/mad/groed/altidmætgrød.png" alt="Produktbillede af altidmætgrød">
+        <img src="img/mad/groed/glutenfrigrød.png" alt="Produktbillede af glutenfrigrød">
+        <img src="img/mad/groed/grødblanding.png" alt="Produktbillede af grødblanding">
+        <img src="img/mad/groed/hirsegrød.png" alt="Produktbillede af hirsegrød">
+        <img src="img/mad/groed/krudtuglegrød.png" alt="Produktbillede af krudtuglegrød">
+        <img src="img/mad/groed/ristilgrød.png" alt="Produktbillede af ristilgrød">
       </div>
       <div class="hylde"></div>
       <h2 id="mel">Mel</h2>
       <div class="kategoribilleder">
-        <img src="img/mad/mel/amarantmel.png" alt="">
-        <img src="img/mad/mel/bygmel.png" alt="">
-        <img src="img/mad/mel/chufamel.png" alt="">
-        <img src="img/mad/mel/dalarhvedemel.png" alt="">
-        <img src="img/mad/mel/mandelmel.png" alt="">
-        <img src="img/mad/mel/sesammel.png" alt="">
+        <img src="img/mad/mel/amarantmel.png" alt="Produktbillede af amarantmel">
+        <img src="img/mad/mel/bygmel.png" alt="Produktbillede af bygmel">
+        <img src="img/mad/mel/chufamel.png" alt="Produktbillede af chufamel">
+        <img src="img/mad/mel/dalarhvedemel.png" alt="Produktbillede af dalarhvedemel">
+        <img src="img/mad/mel/mandelmel.png" alt="Produktbillede af mandelmel">
+        <img src="img/mad/mel/sesammel.png" alt="Produktbillede af sesammel">
       </div>
       <div class="hylde"></div>
+
       <h2 id="pasta">Pasta</h2>
       <div class="kategoribilleder">
-        <img src="img/mad/pasta/bioganpasta.png" alt="">
-        <img src="img/mad/pasta/blackrisenudler.png" alt="">
-        <img src="img/mad/pasta/macaroni.png" alt="">
-        <img src="img/mad/pasta/nudler.png" alt="">
-        <img src="img/mad/pasta/pasta.png" alt="">
-        <img src="img/mad/pasta/spirales.png" alt="">
+        <img src="img/mad/pasta/bioganpasta.png" alt="Produktbillede af bioganpasta">
+        <img src="img/mad/pasta/blackrisenudler.png" alt="Produktbillede af blackrisenudler">
+        <img src="img/mad/pasta/macaroni.png" alt="Produktbillede af macaroni">
+        <img src="img/mad/pasta/nudler.png" alt="Produktbillede af nudler">
+        <img src="img/mad/pasta/pasta.png" alt="Produktbillede af pasta">
+        <img src="img/mad/pasta/spirales.png" alt="Produktbillede af spirales">
       </div>
       <div class="hylde"></div>
+
       <h2 id="saft">Saft</h2>
       <div class="kategoribilleder">
-        <img src="img/mad/saft/ananassaft.png" alt="">
-        <img src="img/mad/saft/birkesaft.png" alt="">
-        <img src="img/mad/saft/citronsaft.png" alt="">
-        <img src="img/mad/saft/grøntsagssaft.png" alt="">
-        <img src="img/mad/saft/hyldebærsaft.png" alt="">
-        <img src="img/mad/saft/rødbedesaft.png" alt="">
+        <img src="img/mad/saft/ananassaft.png" alt="Produktbillede af ananassaft">
+        <img src="img/mad/saft/birkesaft.png" alt="Produktbillede af birkesaft">
+        <img src="img/mad/saft/citronsaft.png" alt="Produktbillede af citronsaft">
+        <img src="img/mad/saft/grøntsagssaft.png" alt="Produktbillede af grøntsagssaft">
+        <img src="img/mad/saft/hyldebærsaft.png" alt="Produktbillede af hyldebærsaft">
+        <img src="img/mad/saft/rødbedesaft.png" alt="Produktbillede af rødbedesaft">
       </div>
       <div class="hylde"></div>
+
       <h2 id="teogkaffe">Te og kaffe</h2>
       <div class="kategoribilleder">
-        <img src="img/mad/kaffeogte/chinesetea.png" alt="">
-        <img src="img/mad/kaffeogte/gingerlemon.png" alt="">
-        <img src="img/mad/kaffeogte/gingertea.png" alt="">
-        <img src="img/mad/kaffeogte/grønkaffe.png" alt="">
-        <img src="img/mad/kaffeogte/kaffee.png" alt="">
-        <img src="img/mad/kaffeogte/nursingtea.png" alt="">
-        <img src="img/mad/kaffeogte/organiktea.png" alt="">
-        <img src="img/mad/kaffeogte/organskkaffe.png" alt="">
-        <img src="img/mad/kaffeogte/Skovenskaffe.png" alt="">
-        <img src="img/mad/kaffeogte/unite.png" alt="">
-        <img src="img/mad/kaffeogte/wholekaffe.png" alt="">
+        <img src="img/mad/kaffeogte/chinesetea.png" alt="Produktbillede af chinesetea">
+        <img src="img/mad/kaffeogte/gingerlemon.png" alt="Produktbillede af gingerlemon">
+        <img src="img/mad/kaffeogte/gingertea.png" alt="Produktbillede af gingertea">
+        <img src="img/mad/kaffeogte/nursingtea.png" alt="Produktbillede af nursingtea">
+        <img src="img/mad/kaffeogte/organiktea.png" alt="Produktbillede af organiktea">
+        <img src="img/mad/kaffeogte/unite.png" alt="Produktbillede af unite">
+        <img src="img/mad/kaffeogte/grønkaffe.png" alt="Produktbillede af grønkaffe">
+        <img src="img/mad/kaffeogte/kaffee.png" alt="Produktbillede af kaffee">
+        <img src="img/mad/kaffeogte/organskkaffe.png" alt="Produktbillede af organskkaffe">
+        <img src="img/mad/kaffeogte/Skovenskaffe.png" alt="Produktbillede af Skovenskaffe">
+        <img src="img/mad/kaffeogte/wholekaffe.png" alt="Produktbillede af wholekaffe">
       </div>
       <div class="hylde"></div>
+
       <h2 id="vin">Vin</h2>
       <div class="kategoribilleder">
-        <img src="img/mad/vin/clearly_rosé.png" alt="">
-        <img src="img/mad/vin/hvidvin_cuvee.png" alt="">
-        <img src="img/mad/vin/hvidvin_latue.png" alt="">
-        <img src="img/mad/vin/rødvin_latue.png" alt="">
-        <img src="img/mad/vin/rødvin_raw.png" alt="">
-        <img src="img/mad/vin/spansk_cava.png" alt="">
+        <img src="img/mad/vin/clearly_rosé.png" alt="Produktbillede af clearly rosé">
+        <img src="img/mad/vin/hvidvin_cuvee.png" alt="Produktbillede af hvidvin cuvee">
+        <img src="img/mad/vin/hvidvin_latue.png" alt="Produktbillede af hvidvin latue">
+        <img src="img/mad/vin/rødvin_latue.png" alt="Produktbillede af rødvin latue">
+        <img src="img/mad/vin/rødvin_raw.png" alt="Produktbillede af rødvin raw">
+        <img src="img/mad/vin/spansk_cava.png" alt="Produktbillede af spansk cava">
       </div>
       <div class="hylde"></div>
     </main>
