--- a/sundhed.html
+++ b/sundhed.html
@@ -30,47 +30,47 @@
     <ul class="menu">
       <li><a href="#cremer">CREMER</a></li>
       <li><a href="#vitamintilskud">KOSTTILSKUD</a></li>
-      <li><a href="#lægemidler">LÆGEMIDLER</a></li>
+      <li><a href="#leagemidler">LÆGEMIDLER</a></li>
       <li><a href="#tilskud">TILSKUD</a></li>
     </ul>
 <!-- MAIN -->
     <main>
       <h2 id="cremer">CREMER</h2>
       <div class="kategoribilleder">
-        <img src="img/sundhed/cremer/aftersun.png" alt="almawin">
-        <img src="img/sundhed/cremer/antiaging.png" alt="almawin">
-        <img src="img/sundhed/cremer/bodylotion.png" alt="almawin">
-        <img src="img/sundhed/cremer/creme.png" alt="almawin">
-        <img src="img/sundhed/cremer/facecream.png" alt="almawin">
-        <img src="img/sundhed/cremer/sunlotion.png" alt="almawin">
+        <img src="img/sundhed/cremer/aftersun.png" alt="Produktbillede af aftersun">
+        <img src="img/sundhed/cremer/antiaging.png" alt="Produktbillede af antiaging">
+        <img src="img/sundhed/cremer/bodylotion.png" alt="Produktbillede af bodylotion">
+        <img src="img/sundhed/cremer/creme.png" alt="Produktbillede af creme">
+        <img src="img/sundhed/cremer/facecream.png" alt="Produktbillede af facecream">
+        <img src="img/sundhed/cremer/sunlotion.png" alt="Produktbillede af sunlotion">
       </div>
       <div class="hylde"></div>
 
       <h2 id="kosttilskud">KOSTTILSKUD</h2>
       <div class="kategoribilleder">
-        <img src="img/sundhed/kosttilskud/calmag.png" alt="almawin">
-        <img src="img/sundhed/kosttilskud/granatæble.png" alt="almawin">
-        <img src="img/sundhed/kosttilskud/mave.png" alt="almawin">
-        <img src="img/sundhed/kosttilskud/overgangsalderen.png" alt="almawin">
-        <img src="img/sundhed/kosttilskud/øjenkosttilskud.png" alt="almawin">
+        <img src="img/sundhed/kosttilskud/calmag.png" alt="Produktbillede af calmag">
+        <img src="img/sundhed/kosttilskud/granatæble.png" alt="Produktbillede af granatæble">
+        <img src="img/sundhed/kosttilskud/mave.png" alt="Produktbillede af mave">
+        <img src="img/sundhed/kosttilskud/overgangsalderen.png" alt="Produktbillede af overgangsalderen">
+        <img src="img/sundhed/kosttilskud/øjenkosttilskud.png" alt="Produktbillede af øjenkosttilskud">
       </div>
       <div class="hylde"></div>
 
-      <h2 id="lægemidler">LÆGEMIDLER</h2>
+      <h2 id="leagemidler">LÆGEMIDLER</h2>
       <div class="kategoribilleder">
-        <img src="img/sundhed/leagemidler/forkølelse.png" alt="almawin">
-        <img src="img/sundhed/leagemidler/husk.png" alt="almawin">
-        <img src="img/sundhed/leagemidler/næseskyl.png" alt="almawin">
-        <img src="img/sundhed/leagemidler/prostasan.png" alt="almawin">
-        <img src="img/sundhed/leagemidler/valerina.png" alt="almawin">
-        <img src="img/sundhed/leagemidler/velzina.png" alt="almawin">
+        <img src="img/sundhed/leagemidler/forkølelse.png" alt="Produktbillede af forkølelse">
+        <img src="img/sundhed/leagemidler/husk.png" alt="Produktbillede af husk">
+        <img src="img/sundhed/leagemidler/næseskyl.png" alt="Produktbillede af næseskyl">
+        <img src="img/sundhed/leagemidler/prostasan.png" alt="Produktbillede af prostasan">
+        <img src="img/sundhed/leagemidler/valerina.png" alt="Produktbillede af valerina">
+        <img src="img/sundhed/leagemidler/velzina.png" alt="Produktbillede af velzina">
       </div>
       <div class="hylde"></div>
 
       <h2 id="tilskud">TILSKUD</h2>
       <div class="kategoribilleder">
-        <img src="img/sundhed/tilskud/jernm.png" alt="almawin">
-        <img src="img/sundhed/tilskud/magnesium.png" alt="almawin">
+        <img src="img/sundhed/tilskud/jernm.png" alt="Produktbillede af jernm">
+        <img src="img/sundhed/tilskud/magnesium.png" alt="Produktbillede af magnesium">
       </div>
       <div class="hylde"></div>
     </main>
