Add CSS to kontakt footer
'kontakt.html'

--- a/kontakt.html
+++ b/kontakt.html
@@ -51,7 +51,7 @@
       </section>
     </main>
 <!-- FOOTER -->
-    <footer>
+    <footer id="frontfooter">
       <p>&copy Naturkost 2020</p>
     </footer>
   </body>
