Edit kontakt, om, CSS
'kontakt.html', 'omnaturkost' & 'styling.css'

--- a/kontakt.html
+++ b/kontakt.html
@@ -24,6 +24,7 @@
     </header>
 <!-- MAIN -->
     <main>
+      <h1>Kontakt Naturkost</h1>
       <section id="kontaktsbox">
         <!-- ADRESSE -->
         <div class="kontakoplysninger">
