--- a/omnaturkost.html
+++ b/omnaturkost.html
@@ -42,7 +42,7 @@
         <video id="video1" src="video/prøvemedmusik.mp4" width="800" controls </video>
       </div>
       <h1>Om Naturkost</h1>
-      <p> hej hej hej </p>
+      <p> Naturkost Odense er en lokalejet forretning, der har ligget i hjertet af Odense siden 1972. De har etableret sig i odenseanernes bevidsthed både på baggrund af deres brede sortiment af varer, men især på grund af den personlige og professionelle betjening og vejledning, de tilbyder både faste og nye kunder.</p>
     </main>
 <!-- FOOTER -->
     <footer>
