--- a/andet.html
+++ b/andet.html
@@ -15,7 +15,7 @@
   <header>
     <h1>Andet</h1>
     <div id="headericons">
-      <img src="img/ikoner/kurv.png" alt="kurv">
+      <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
       <a href="burger">
         <div id="burgermenu">
           <div class="burger"></div>
