--- a/hverdag.html
+++ b/hverdag.html
@@ -14,7 +14,7 @@
   	<header>
       <h1>HVERDAG</h1>
       <div id="headericons">
-        <img src="img/ikoner/kurv.png" alt="kurv">
+				<a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
   <!-- BURGERMENU -->
         <a href="burger">
           <div id="burgermenu">
@@ -50,7 +50,7 @@
 				<img src="img/hverdag/rengoering/vaskemiddel.png" alt="Produktbillede af vaskemiddel">
 			</div>
 			<div class="hylde"></div>
-			
+
 			<h2 id="toej">TØJ</h2>
 			<div class="kategoribilleder">
 				<img src="img/hverdag/toej/bodystocking.png" alt="Produktbillede af kort bodystocking">
