--- a/kurv.html
+++ b/kurv.html
@@ -5,6 +5,7 @@
     <link href="styling.css" rel="stylesheet" type="text/css">
     <meta name="description" content="Økologiske produkter">
     <meta name="keywords" content="sundhed,krystaller,økologi,kosttilskud,vegansk,naturligt,fødevare,biodynamisk,velvære,naturkost">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
     <script src="javascript.js"></script>
     <title>Din kurv - Naturkost Odense</title>
