--- a/omnaturkost.html
+++ b/omnaturkost.html
@@ -14,7 +14,7 @@
     <header>
       <h1>OM NATURKOST</h1>
       <div id="headericons">
-        <img src="img/ikoner/kurv.png" alt="kurv">
+        <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
   <!-- BURGERMENU -->
         <a href="burger">
           <div id="burgermenu">
