--- a/andet.html
+++ b/andet.html
@@ -14,6 +14,9 @@
 <body>
   <header>
     <h1>Andet</h1>
+    <a href="main.html">
+    <img id="logo" src="img/logo/naturkostbladslog01.png" alt="vores logo">
+    </a>
     <div id="headericons">
       <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
       <a href="burger">
