--- a/kurv.html
+++ b/kurv.html
@@ -14,6 +14,9 @@
 <!-- HEADER -->
     <header>
       <h1>DIN KURV</h1>
+      <a href="main.html">
+      <img id="logo1" src="img/logo/naturkostblad.png" alt="vores logo">
+      </a>
       <div id="headericons">
         <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
   <!-- BURGERMENU -->
