--- a/hverdag.html
+++ b/hverdag.html
@@ -13,6 +13,9 @@
 <!-- HEADER -->
   	<header>
       <h1>HVERDAG</h1>
+			<a href="main.html">
+			<img id="logo1" src="img/logo/naturkostblad.png" alt="vores logo">
+			</a>
       <div id="headericons">
 				<a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
   <!-- BURGERMENU -->
