--- a/omnaturkost.html
+++ b/omnaturkost.html
@@ -13,6 +13,9 @@
 <!-- HEADER -->
     <header>
       <h1>OM NATURKOST</h1>
+      <a href="main.html">
+      <img id="logo1" src="img/logo/naturkostblad.png" alt="vores logo">
+      </a>
       <div id="headericons">
         <a href="kurv.html"><img src="img/ikoner/kurv.png" alt="kurv"></a>
   <!-- BURGERMENU -->
@@ -27,22 +30,13 @@
     </header>
 <!-- MAIN -->
     <main>
-      <nav>
-        <div class="logo">
-          <img src="logo/naturkostlogo.png" alt="Naturkost Odense" height="100%px" width="100%">
-        </div>
-        <div class="kurv">
-          <img src="iconer/kurv.png" alt="tryk her for at se din kurv" height="10px" width="10px">
-        </div>
-        <div class="menu">
-          <img src="iconer/menuicon.png" alt="tryk her for at se menu" height="10px" width="10px">
-        </div>
-      </nav>
       <div>
-        <video id="video1" src="video/prøvemedmusik.mp4" width="800" controls </video>
+        <video id="video1" src="video/prøvemedmusik.mp4" width="400" controls </video>
       </div>
-      <h1>Om Naturkost</h1>
-      <p> Naturkost Odense er en lokalejet forretning, der har ligget i hjertet af Odense siden 1972. De har etableret sig i odenseanernes bevidsthed både på baggrund af deres brede sortiment af varer, men især på grund af den personlige og professionelle betjening og vejledning, de tilbyder både faste og nye kunder.</p>
+
+      <p> Naturkost Odense er en lokalejet forretning, der har ligget i hjertet af Odense siden 1972.
+        De har etableret sig i odenseanernes bevidsthed både på baggrund af deres brede sortiment af varer,
+        men især på grund af den personlige og professionelle betjening og vejledning, de tilbyder både faste og nye kunder.</p>
     </main>
 <!-- FOOTER -->
     <footer>
