bug fix and @media
fixed img name
optimized .kategoribilleder to mobile

--- a/mad.html
+++ b/mad.html
@@ -101,7 +101,7 @@
 
       <h2 id="vin">Vin</h2>
       <div class="kategoribilleder">
-        <img src="img/mad/vin/clearly_rosé.png" alt="Produktbillede af clearly rosé">
+        <img src="img/mad/vin/clearly_rose.png" alt="Produktbillede af clearly rosé">
         <img src="img/mad/vin/hvidvin_cuvee.png" alt="Produktbillede af hvidvin cuvee">
         <img src="img/mad/vin/hvidvin_latue.png" alt="Produktbillede af hvidvin latue">
         <img src="img/mad/vin/rødvin_latue.png" alt="Produktbillede af rødvin latue">
